--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "3.1.1"
+    "react-redux": "^8.0.5",
+    "react-scripts": "3.1.1",
+    "redux": "^4.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
